--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  get_it: ^1.0.3+1
+  http: ^0.12.0+2
+  provider: ^2.0.1
+  dio: 2.1.0
+  shared_preferences: ^0.5.3+1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
