--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   provider: ^3.0.0
   dio: 2.1.0
   shared_preferences: ^0.5.3+1
+  flutter_spinkit: ^3.1.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
