--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A Laravel Forge mobile app.
 version: 0.0.1+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
